--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 { "title": "Task 10", "url": "works/task11/24.html" },
                 { "title": "Task 11", "url": "works/task12/index.html" },
                 { "title": "Task 12", "url": "works/task13/task17.html" },
-                { "title": "Task 13", "url": "task15/bulb.html" }
+                { "title": "Task 13", "url": "works/task15/bulb.html" }
             ];
 
             tasks.forEach(task => {
